Commencement, Création controller Bienenue

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <p>BTS SIO2</p>
+        {% block body %}
+
+        {% endblock %}
     </body>
 </html>
