--- a/templates/bienvenue/index.html.twig
+++ b/templates/bienvenue/index.html.twig
@@ -3,20 +3,7 @@
 {% block title %}Hello BienvenueController!{% endblock %}
 
 {% block body %}
-{#<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/omarf/Documents/SIO2_DEV/PHP_SIO_2/Projets/Symfony/symfony-projet/src/Controller/BienvenueController.php'|file_link(0) }}">src/Controller/BienvenueController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/omarf/Documents/SIO2_DEV/PHP_SIO_2/Projets/Symfony/symfony-projet/templates/bienvenue/index.html.twig'|file_link(0) }}">templates/bienvenue/index.html.twig</a></code></li>
-    </ul>
-</div>#}
-
-    <p>Bienvenue dans le cours Symfony✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅</p>
+    <p>Bienvenue {{ prenom |upper }} dans le cours Symfony</p>
 {% endblock %}
