--- a/templates/bienvenue/index.html.twig
+++ b/templates/bienvenue/index.html.twig
@@ -5,5 +5,22 @@
 {% block body %}
 
 
-    <p>Bienvenue {{ prenom |upper }} dans le cours Symfony</p>
+    <p>Bienvenue {{ prenom |capitalize }} dans le cours Symfony</p>
+    <p>le prenom a une longeur de  {{ prenom | length}} caractère</p>
+
+    {# tester si le prenom commpar la lettre j #}
+    {% if prenom | first  == 'd' %}
+        <p>Le prenom commence par la lettre de 'd'</p>
+    {% else %}
+        <p>Le prenom ne commence pas par la lettre 'd'</p>
+    {% endif %}
+
+
+
+
+    // 2ème solution
+    {% if prenom starts with 'd' or 'D' %}
+        <p>Le prenom commence par la lettre de 'd' seondo solution del manana</p>
+    {% endif %}
+
 {% endblock %}
