--- a/templates/bienvenue/index.html.twig
+++ b/templates/bienvenue/index.html.twig
@@ -7,9 +7,9 @@
 
 
     {% if  prenom is defined %}
-        <p>Bienvenue {{ prenom |capitalize }} dans le cours Symfony</p>
+        <h1>Bienvenue {{ prenom |capitalize }} dans le cours Symfony</h1>
     {% else %}
-        <p>Bienvenue dans le cours Symfony</p>
+        <h1>Bienvenue dans le cours Symfony</h1>
 
     {% endif %}
 
