exercice à finir disponible dans divers

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,18 @@
 
 
 
+
+
+
+
+
         {% block body %}
         {% endblock %}
 
 
     </body>
+
+    {% include 'partials/_footer.html.twig' %}
+
+
 </html>
