--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,40 @@
-h1{
-    color : brown;
-    font-size:
-            40px;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+}
+nav  a {
+    text-decoration: none;
+    color: black;
+}
+
+h1 {
+    color: coral;
+    font-size: 40px;
     font-weight: 700;
     text-align: center;
     text-transform: uppercase;
     margin-top: 20px;
     margin-bottom: 20px;
-
 }
 
+.listeHeader {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0;
+    margin: 10px;
+}
+
+.listeHeader li {
+    margin: 5px;
+}
+
+header {
+    margin-top: 0px;
+    background: #3b82f6;
+    margin-bottom: 80px;
+}
