--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -1,8 +1,9 @@
 <header>
     <nav>
-        <ul>
+        <ul class = "listeHeader">
             <li><a href="{{ path('app_bienvenue') }}">Bienvenue </a></li>
             <li><a href="{{ path('app_bienvenues') }}">Bienvenues à tous</a></li>
+            <li><a href="{{ path('app_etudiant_liste') }}">Liste étudiants</a></li>
         </ul>
     </nav>
 </header>
