--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -2,7 +2,7 @@
     <nav>
         <ul class = "listeHeader">
             <li><a href="{{ path('app_bienvenue') }}">Bienvenue </a></li>
-            <li><a href="{{ path('app_bienvenues') }}">Bienvenues à tous</a></li>
+            <li><a href="{{ path('app_bienvenues') }}">Bienvenue à tous</a></li>
             <li><a href="{{ path('app_etudiant_liste') }}">Liste étudiants</a></li>
         </ul>
     </nav>
