Ajout dela visualisation de la promotion de l'étudiant

--- a/templates/etudiant/etudiant.html.twig
+++ b/templates/etudiant/etudiant.html.twig
@@ -13,6 +13,7 @@
         <li>Email : {{ etudiant.email }}</li>
         <li> Né le {{ etudiant.dateNaissance | date("d/m/Y") }}</li>
         <li>Age : {{ etudiant.age }} ans</li>
+        <li>Promotion : {{ etudiant.promotion.nom }} </li>
     </ul>
 
 
