Réalisation exercice Promotions affichage de la vue

--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -4,6 +4,8 @@
             <li><a href="{{ path('app_bienvenue') }}">Bienvenue </a></li>
             <li><a href="{{ path('app_bienvenues') }}">Bienvenue à tous</a></li>
             <li><a href="{{ path('app_etudiant_liste') }}">Liste étudiants</a></li>
+            <li><a href="{{ path('app_promotion_liste') }}">Liste promotions</a></li>
+
         </ul>
     </nav>
 </header>
